; ModuleID = '/home/carl/AnghaBench/torch7/extr_Generator.c_torch_Generator_write.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_Generator.c_torch_Generator_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@torch_Generator = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [11 x i8] c"torch.File\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_Generator_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_Generator_write(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i8*, i8** @torch_Generator, align 8
  %7 = call i8* @luaT_checkudata(i32* %5, i32 1, i8* %6)
  %8 = bitcast i8* %7 to i32*
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i8* @luaT_checkudata(i32* %9, i32 2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = bitcast i32* %13 to i8*
  %15 = call i32 @THFile_writeByteRaw(i32* %12, i8* %14, i32 4)
  ret i32 0
}

declare dso_local i8* @luaT_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @THFile_writeByteRaw(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
